Parser/test_cases/good/twoclassesoneinherits.cl
class Hello {
   foo: Int;
};

class Goodbye inherits Hello {
   foo: Int;
};
