Parser/test_cases/bad/newinfix.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      new +
   };
   
   bar() :Int {
      6
   };
   
   
};
